Prepare for review.

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 markers =
-    success_msg
-    login
-    basket
-    register
+    login_guest
+    basket_guest
+    basket_user
+    need_review
